# girl.technology

./: .gitignore  Cargo.toml  NOTES.md  README.md  after.sh  bot-girl-technology.service  dev.env  dist-workspace.toml  flake.nix  install.sh  nixos.env  prod.env  prod_run.sh  run.sh  rustfmt.toml  shell.nix
.cargo/: config.toml
.github/workflows/: release.yml
infra/nginx/: girl.technology.conf
infra/sudoers.d/: github_webhook_watcher
migrations/2024-01-24-040946_create_listings/: down.sql  up.sql
migrations/2024-08-17-011151_unique_by_category/: down.sql  up.sql
src/: admin.rs  checker.rs  main.rs  models.rs  schema.rs  static.rs
static/: .stylelintignore  esbuild.mjs  index.css  package-lock.json  package.json
templates/: category.html.jinja  default.html.jinja  index.html  index.html.jinja  list.html.jinja  new.html.jinja  submit.html.jinja
