[package]
name = "girl_technology"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/p0lyw0lf/girl.technology"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
deadpool = "0.10"
diesel = "2.1"
diesel-async = { version = "0.4", features = ["deadpool", "postgres"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1.19"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# Whether to build with admin routes
admin = []
# Whether to serve static content as well
static = ["tower-http"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.9.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "buildjet-8vcpu-ubuntu-2204-arm"
