[package]
name = "girl_technology"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/p0lyw0lf/girl.technology"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
deadpool = "0.10"
diesel = "2.1"
diesel-async = { version = "0.4", features = ["deadpool", "postgres"] }
dotenvy = "0.15"
lazy_static = "1"
reqwest = { version = "0.12", default-features = false, features = ["gzip", "rustls-tls"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
tera = "1.19"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["buffer", "limit", "timeout"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[features]
# Whether to build with admin routes
admin = []
# Whether to serve static content as well
static = ["tower-http/fs"]
